# isync

./: .gitignore  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
debian/: .gitignore  README.Debian  changelog  control  copyright  rules  watch
src/: .gitignore  Makefile.am  common.h  config.c  config.h  driver.c  driver.h  drv_imap.c  drv_maildir.c  drv_proxy.c  drv_proxy_gen.pl  isync.h  main.c  mbsync.1  mbsyncrc.sample  mdconvert.c  run-tests.pl  socket.c  socket.h  sync.c  sync.h  tst_timers.c  util.c
src/compat/: .gitignore  Makefile.am  config.c  convert.c  isync.1  isync.h  isyncrc.sample  main.c  util.c
